fix(loader): hide overflow

--- a/react/src/components/loader/Loader.css
+++ b/react/src/components/loader/Loader.css
@@ -13,6 +13,7 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.6669s ease-in, visibility 0.6669s ease-in;
+    overflow: hidden;
 }
 
 .Loader.visible {
